theme: Add menu link to my portfolio

--- a/themes/blog.yong-ju.me/layouts/partials/head.html
+++ b/themes/blog.yong-ju.me/layouts/partials/head.html
@@ -28,6 +28,10 @@
     href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono&display=swap"
     rel="stylesheet"
   />
+  <link
+    href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css"
+    rel="stylesheet"
+  />
 
   {{ if .OutputFormats.Get "RSS" }}
     {{ with .OutputFormats.Get "RSS" }}
