--- a/themes/blog.yong-ju.me/assets/css/components/menu.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/menu.scss
@@ -1,48 +1,36 @@
 .menu {
-  align-items: center;
   background: #000;
-  color: #fff;
   display: flex;
-  height: 48px;
   justify-content: center;
   list-style: none;
+}
 
-  &__item {
-    font-family: Lato, sans-serif;
-    font-size: 0.9rem;
-    letter-spacing: 0.1em;
-    margin: 0 1em;
-    text-transform: uppercase;
+.menu-item {
+  align-items: center;
+  display: inline-flex;
 
-    a {
-      color: inherit;
-      display: block;
-      line-height: 1.9em;
-      text-decoration: none;
+  &__icon {
+    color: #777;
+    font-size: 1.4rem;
+    margin: 0 0.25em 0 0;
+  }
 
-      &::after {
-        background: #fff;
-        content: "";
-        display: block;
-        height: 3px;
-      }
-    }
+  &__link {
+    @extend %menu-item-font;
 
-    &:not(&--active) {
-      a::after {
-        transform: scaleX(0);
-        transform-origin: 0.5 0;
-        transition: transform 0.3s ease;
-      }
+    color: #ddd;
+    padding: 1em 0;
+    text-decoration: none;
 
-      a:hover {
-        color: $accent-color;
-
-        &::after {
-          background: $accent-color;
-          transform: scaleX(1);
-        }
-      }
+    &:hover {
+      color: #fff;
     }
   }
+}
+
+%menu-item-font {
+  font-family: Lato, sans-serif;
+  font-size: 0.9rem;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
