--- a/themes/blog.yong-ju.me/layouts/partials/header.html
+++ b/themes/blog.yong-ju.me/layouts/partials/header.html
@@ -15,17 +15,19 @@
         <li
           class="menu__item {{ if $currentPage.HasMenuCurrent "main" . }}menu__item--active{{ end }}"
         >
-          <a href="#">
+          <div class="menu-item">
             {{ .Pre }}
-            <span>{{ .Name }}</span>
-          </a>
+            <a href="#" class="menu-item__link">{{ .Name }}</a>
+          </div>
         </li>
         <ul>
           {{ range .Children }}
             <li
               class="menu__item {{ if $currentPage.IsMenuCurrent "main" . }}menu__item--active{{ end }}"
             >
-              <a href="{{ .URL }}">{{ .Name }}</a>
+              <div class="menu-item">
+                <a href="{{ .URL }}" class="menu-item__link">{{ .Name }}</a>
+              </div>
             </li>
           {{ end }}
         </ul>
@@ -33,10 +35,15 @@
         <li
           class="menu__item {{ if $currentPage.IsMenuCurrent "main" . }}menu__item--active{{ end }}"
         >
-          <a href="{{ .URL }}">
+          <div class="menu-item">
+            <span class="menu-item__icon">
+              <i class="mdi mdi-open-in-new"></i>
+            </span>
             {{ .Pre }}
-            <span>{{ .Name }}</span>
-          </a>
+            <a href="{{ .URL }}" class="menu-item__link">
+              <span>{{ .Name }}</span>
+            </a>
+          </div>
         </li>
       {{ end }}
     {{ end }}
