--- a/themes/blog.yong-ju.me/assets/css/components/card.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/card.scss
@@ -1,8 +1,8 @@
 .card {
   & + & {
     border-top: 1px solid $border-color-alt;
-    margin: 1rem 0 0;
-    padding: 1rem 0 0;
+    margin: $margin-m 0 0;
+    padding: $padding-m 0 0;
   }
 
   > a {
