--- a/themes/blog.yong-ju.me/assets/css/components/content.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/content.scss
@@ -66,7 +66,7 @@
   ul {
     line-height: 1.9em;
     margin: 1.5em 0;
-    padding: 0 0 0 1.5rem;
+    padding: 0 0 0 $padding-l;
 
     ol,
     ul {
