--- a/themes/blog.yong-ju.me/assets/css/components/heading.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/heading.scss
@@ -1,16 +1,16 @@
 .heading {
-  margin: 0 0 2.5rem;
+  margin: 0 0 $margin-xxl;
 
   &__date {
     display: block;
     color: #999;
     font-size: 0.875rem;
-    margin: 0 0 1.5rem;
+    margin: 0 0 $margin-l;
   }
 
   &__title {
     font-size: 2.5rem;
-    margin: 0 0 1rem;
+    margin: 0 0 $margin-m;
   }
 
   &__tags {
