--- a/themes/blog.yong-ju.me/assets/css/components/highlight.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/highlight.scss
@@ -1,10 +1,10 @@
 .highlight {
   border-bottom: 1px solid $border-color;
   border-top: 1px solid $border-color;
-  margin: 1.5rem 0;
+  margin: $margin-l 0;
 
   pre {
-    padding: 2rem;
+    padding: $padding-xl;
   }
 
   code {
