--- a/themes/blog.yong-ju.me/assets/css/components/pagination.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   display: flex;
   justify-content: center;
-  margin: 1.5rem 0 0 0;
+  margin: $margin-l 0 0 0;
 
   .page-item {
     background: #fff;
