--- a/themes/blog.yong-ju.me/assets/css/variables.scss
+++ b/themes/blog.yong-ju.me/assets/css/variables.scss
@@ -6,3 +6,21 @@ $background-color: #eee;
 $text-color: #333;
 
 $single-space: 0.25em;
+
+/// Spacing
+
+$margin-xxs: 0.125rem;
+$margin-xs: 0.25rem;
+$margin-s: 0.5rem;
+$margin-m: 1rem;
+$margin-l: 1.5rem;
+$margin-xl: 2rem;
+$margin-xxl: 2.5rem;
+
+$padding-xxs: 0.125rem;
+$padding-xs: 0.25rem;
+$padding-s: 0.5rem;
+$padding-m: 1rem;
+$padding-l: 1.5rem;
+$padding-xl: 2rem;
+$padding-xxl: 2.5rem;
