theme: Use $border-color-alt for <hr/> in content

--- a/themes/blog.yong-ju.me/assets/css/components/content.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/content.scss
@@ -75,7 +75,7 @@
   }
 
   hr {
-    background: $border-color;
+    background: $border-color-alt;
     border: 0;
     height: 1px;
     margin: 3em 0;
