--- a/themes/blog.yong-ju.me/assets/css/components/card.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/card.scss
@@ -12,19 +12,19 @@
   }
 
   &__title {
-    font-size: 1.125rem;
+    font-size: $font-size-l;
   }
 
   &__summary {
     color: #555;
-    font-size: 0.875rem;
+    font-size: $font-size-xs;
     line-height: 1.5em;
     margin: 0.5em 0 0;
   }
 
   &__date {
     color: #999;
-    font-size: 0.75rem;
+    font-size: $font-size-xxs;
     line-height: 1.5em;
     margin: 0.5em 0 0;
   }
