--- a/themes/blog.yong-ju.me/assets/css/components/heading.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/heading.scss
@@ -4,12 +4,12 @@
   &__date {
     display: block;
     color: #999;
-    font-size: 0.875rem;
+    font-size: $font-size-xs;
     margin: 0 0 $margin-l;
   }
 
   &__title {
-    font-size: 2.5rem;
+    font-size: $font-size-xxl;
     margin: 0 0 $margin-m;
   }
 
@@ -19,7 +19,7 @@
 
   &__tag {
     background: #eee;
-    font-size: 0.875rem;
+    font-size: $font-size-xs;
     list-style: none;
     margin: 0 $single-space 0;
 
