--- a/themes/blog.yong-ju.me/assets/css/components/menu.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/menu.scss
@@ -30,7 +30,7 @@
 
 %menu-item-font {
   font-family: Lato, sans-serif;
-  font-size: 0.9rem;
+  font-size: $font-size-s;
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
