--- a/themes/blog.yong-ju.me/assets/css/components/pagination.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/pagination.scss
@@ -7,7 +7,7 @@
     background: #fff;
     border: 1px solid $border-color;
     display: block;
-    font-size: 0.875rem;
+    font-size: $font-size-xs;
     height: 38px;
     line-height: 38px;
     margin: 0 $single-space;
