--- a/themes/blog.yong-ju.me/assets/css/variables.scss
+++ b/themes/blog.yong-ju.me/assets/css/variables.scss
@@ -24,3 +24,13 @@ $padding-m: 1rem;
 $padding-l: 1.5rem;
 $padding-xl: 2rem;
 $padding-xxl: 2.5rem;
+
+/// Typography
+
+$font-size-xxs: 0.75rem;
+$font-size-xs: 0.875rem;
+$font-size-s: 0.9rem;
+$font-size-m: 1rem;
+$font-size-l: 1.125rem;
+$font-size-xl: 1.8rem;
+$font-size-xxl: 2.5rem;
