theme: Replace MathJax with KaTeX

--- a/themes/blog.yong-ju.me/assets/css/components/content.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/content.scss
@@ -84,6 +84,11 @@
   table {
     @extend %content__table;
   }
+
+  .katex-display {
+    margin-bottom: 1.5em;
+    margin-top: 1.5em;
+  }
 }
 
 %content__table {
