--- a/themes/blog.yong-ju.me/assets/css/components/content.scss
+++ b/themes/blog.yong-ju.me/assets/css/components/content.scss
@@ -88,6 +88,10 @@
   .katex-display {
     margin-bottom: 1.5em;
     margin-top: 1.5em;
+
+    &, & > .katex {
+      text-align: inherit;
+    }
   }
 }
 
