--- a/themes/blog.yong-ju.me/assets/css/variables.scss
+++ b/themes/blog.yong-ju.me/assets/css/variables.scss
@@ -1,36 +1,62 @@
-$accent-color: #dca;
+/// Bootstrap variables
 
-$border-color: #ccc;
-$border-color-alt: #ddd;
-$background-color: #eee;
-$text-color: #333;
+// Color system
 
-$single-space: 0.25em;
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
 
-/// Spacing
+$primary: #248;
+$light: $gray-200;
+$dark: $black;
 
-$margin-xxs: 0.125rem;
-$margin-xs: 0.25rem;
-$margin-s: 0.5rem;
-$margin-m: 1rem;
-$margin-l: 1.5rem;
-$margin-xl: 2rem;
-$margin-xxl: 2.5rem;
+// Spacing
 
-$padding-xxs: 0.125rem;
-$padding-xs: 0.25rem;
-$padding-s: 0.5rem;
-$padding-m: 1rem;
-$padding-l: 1.5rem;
-$padding-xl: 2rem;
-$padding-xxl: 2.5rem;
+$spacer: 1rem;
 
-/// Typography
+// Typography
 
-$font-size-xxs: 0.75rem;
-$font-size-xs: 0.875rem;
-$font-size-s: 0.9rem;
-$font-size-m: 1rem;
-$font-size-l: 1.125rem;
-$font-size-xl: 1.8rem;
-$font-size-xxl: 2.5rem;
+$font-family-sans-serif: "Noto Sans JP", "Noto Sans", -apple-system,
+  BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-serif: "Noto Serif JP", Gerogia, "Times New Roman", serif;
+$font-size-base: 1rem;
+
+// Badges
+
+$badge-border-radius: 0;
+
+// Blockquotes
+
+$blockquote-font-size: $font-size-base;
+
+// Body
+
+$body-bg: $gray-200;
+
+// Dropdowns
+
+$dropdown-link-hover-bg: $gray-200;
+
+// Grid columns
+
+$grid-gutter-width: $spacer;
+
+// Links
+
+$link-color: #445;
+$link-decoration: underline;
+$link-hover-color: #aab;
+$link-hover-decoration: underline;
+
+// Navs
+
+$navbar-nav-link-padding-x: $spacer * 0.75;
