--- a/themes/blog.yong-ju.me/layouts/partials/head.html
+++ b/themes/blog.yong-ju.me/layouts/partials/head.html
@@ -23,24 +23,11 @@
   {{ $options := (dict "outputStyle" "compressed") }}
   {{ $stylesheet := resources.Get "css/index.scss" | toCSS $options }}
   <link href="{{ $stylesheet.Permalink }}" rel="stylesheet" />
+  <link href="{{ relLangURL "" }}bootstrap-icons-1.3.0/bootstrap-icons.css" rel="stylesheet" />
+  <link href="{{ relLangURL "" }}katex-0.12.0/katex.min.css" rel="stylesheet" />
 
-  <link
-    href="{{ relLangURL "" }}materialdesignicons-v5.4.55/css/materialdesignicons.min.css"
-    rel="stylesheet"
-  />
-  <link
-    href="{{ relLangURL "" }}katex-v0.12.0/katex.min.css"
-    rel="stylesheet"
-  />
-  <link href="https://fonts.gstatic.com" rel="preconnect" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css"
-    rel="stylesheet"
-  />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@500;700&display=swap" rel="stylesheet" />
 
   {{ if .OutputFormats.Get "RSS" }}
     {{ with .OutputFormats.Get "RSS" }}
@@ -64,25 +51,4 @@
     {{ block "title" . }}{{ with .Params.Title }}{{ . }} |
     {{ end }}{{ .Site.Title }}{{ end }}
   </title>
-
-  <script defer src="{{ relLangURL "" }}katex-v0.12.0/katex.min.js"></script>
-  <script defer src="{{ relLangURL "" }}katex-v0.12.0/contrib/auto-render.min.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      renderMathInElement(document.body, {
-        delimiters: [
-          {
-            left: "$$",
-            right: "$$",
-            display: {{ if .IsPage }}true{{ else }}false{{ end }},
-          },
-          {
-            left: "$",
-            right: "$",
-            display: false,
-          },
-        ],
-      });
-    });
-  </script>
 </head>
