--- a/themes/blog.yong-ju.me/layouts/partials/head.html
+++ b/themes/blog.yong-ju.me/layouts/partials/head.html
@@ -28,11 +28,25 @@
   {{ $options := (dict "outputStyle" "compressed") }}
   {{ $stylesheet := resources.Get "css/index.scss" | toCSS $options }}
   <link href="{{ $stylesheet.Permalink }}" rel="stylesheet" />
-  <link href="{{ relLangURL "" }}bootstrap-icons-1.3.0/bootstrap-icons.css" rel="stylesheet" />
-  <link href="{{ relLangURL "" }}katex-0.12.0/katex.min.css" rel="stylesheet" />
 
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@500;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@500;700&display=swap"
+    media="print"
+    onload="this.setAttribute('media', 'all')"
+    rel="stylesheet"
+  />
+  <link
+    href="{{ relLangURL "" }}bootstrap-icons-1.3.0/bootstrap-icons.css"
+    media="print"
+    onload="this.setAttribute('media', 'all')"
+    rel="stylesheet"
+  />
+  <link
+    href="{{ relLangURL "" }}katex-0.12.0/katex.min.css"
+    media="print"
+    onload="this.setAttribute('media', 'all')"
+    rel="stylesheet"
+  />
 
   {{ if .OutputFormats.Get "RSS" }}
     {{ with .OutputFormats.Get "RSS" }}
