--- a/themes/blog.yong-ju.me/assets/css/variables.scss
+++ b/themes/blog.yong-ju.me/assets/css/variables.scss
@@ -24,15 +24,14 @@ $spacer: 1rem;
 
 // Typography
 
-$font-family-sans-serif: "Noto Sans JP", "Noto Sans", -apple-system,
-  BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$font-family-serif: "Noto Serif JP", Gerogia, "Times New Roman", serif;
+$font-family-serif: Gerogia, "Times New Roman", "Noto Serif", "Noto Serif JP",
+  serif;
 $font-size-base: 1rem;
 
 // Badges
 
 $badge-border-radius: 0;
+$badge-font-weight: normal;
 
 // Blockquotes
 
