theme: Minor fixes for the layout

--- a/themes/blog.yong-ju.me/assets/css/blog-post.scss
+++ b/themes/blog.yong-ju.me/assets/css/blog-post.scss
@@ -95,6 +95,13 @@
 
   table {
     @extend .table;
+
+    margin: map-get($spacers, 4) 0;
+  }
+
+  > p > img {
+    margin: 0 ($spacer * -2);
+    width: calc(100% + #{$spacer * 4});
   }
 
   hr {
