theme: Fix internal link & resource URLs

--- a/themes/blog.yong-ju.me/layouts/partials/blog-header.html
+++ b/themes/blog.yong-ju.me/layouts/partials/blog-header.html
@@ -1,6 +1,6 @@
 <header class="blog-header">
   <div class="blog-header-title">
-    <a href="{{ relLangURL "" }}">{{ site.Title }}</a>
+    <a href="{{ relURL "/" }}">{{ site.Title }}</a>
   </div>
 
   {{ with site.Params.subtitle }}
