--- a/themes/blog.yong-ju.me/layouts/partials/foot.html
+++ b/themes/blog.yong-ju.me/layouts/partials/foot.html
@@ -1,7 +1,7 @@
-<script src="{{ relLangURL "" }}jquery-3.5.1/jquery.min.js"></script>
-<script src="{{ relLangURL "" }}bootstrap-4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="{{ relLangURL "" }}katex-0.12.0/katex.min.js"></script>
-<script src="{{ relLangURL "" }}katex-0.12.0/contrib/auto-render.min.js"></script>
+<script src="{{ relURL "jquery-3.5.1/jquery.min.js" }}"></script>
+<script src="{{ relURL "bootstrap-4.5.0/dist/js/bootstrap.bundle.min.js" }}"></script>
+<script src="{{ relURL "katex-0.12.0/katex.min.js" }}"></script>
+<script src="{{ relURL "katex-0.12.0/contrib/auto-render.min.js" }}"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     renderMathInElement(document.body, {
