--- a/themes/blog.yong-ju.me/layouts/partials/head.html
+++ b/themes/blog.yong-ju.me/layouts/partials/head.html
@@ -30,13 +30,13 @@
   <link href="{{ $stylesheet.Permalink }}" rel="stylesheet" />
 
   <link
-    href="{{ relLangURL "" }}bootstrap-icons-1.3.0/bootstrap-icons.css"
+    href="{{ relURL "bootstrap-icons-1.3.0/bootstrap-icons.css" }}"
     media="print"
     onload="this.setAttribute('media', 'all')"
     rel="stylesheet"
   />
   <link
-    href="{{ relLangURL "" }}katex-0.12.0/katex.min.css"
+    href="{{ relURL "katex-0.12.0/katex.min.css" }}"
     media="print"
     onload="this.setAttribute('media', 'all')"
     rel="stylesheet"
