--- a/themes/blog.yong-ju.me/layouts/partials/navbar.html
+++ b/themes/blog.yong-ju.me/layouts/partials/navbar.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item{{ if .IsHome }} active{{ end }}">
-          <a class="nav-link" href="{{ relLangURL ""  }}">最近の投稿</a>
+          <a class="nav-link" href="{{ relURL "/"  }}">最近の投稿</a>
         </li>
 
         {{ with .Site.Taxonomies.tags }}
