Major improvements for theme
* Use BEM naming convension for component classnames.
* Minor adjustments for the page layout.
* Wrap header contents with container.
* Prevent `navbar` from expanding on tablet devices.
* Extract new components: `blog-post-list` & `blog-post-item` from list layout.
* Rename component: `navbar` -> `blog-navbar`.
* Remove link to my portfolio.
* Change the colors of pagination buttons to secondary.
* Change footer texts and remove the unnecessary styles.

--- a/themes/blog.yong-ju.me/assets/css/blog-main.scss
+++ b/themes/blog.yong-ju.me/assets/css/blog-main.scss
@@ -2,7 +2,7 @@
   background: $white;
   padding: $spacer * 2;
 
-  &-title {
+  &__title {
     @include font-size($h5-font-size);
 
     font-family: $font-family-serif;
