--- a/themes/blog.yong-ju.me/assets/css/index.scss
+++ b/themes/blog.yong-ju.me/assets/css/index.scss
@@ -22,11 +22,11 @@
 
 @import "blog-footer";
 @import "blog-header";
-@import "blog-list";
 @import "blog-main";
 @import "blog-pagination";
 @import "blog-post";
+@import "blog-post-item";
+@import "blog-post-list";
 @import "blog-sidebar";
 @import "main";
-@import "navbar";
 @import "syntax";
