--- a/themes/blog.yong-ju.me/layouts/partials/blog-sidebar.html
+++ b/themes/blog.yong-ju.me/layouts/partials/blog-sidebar.html
@@ -1,6 +1,6 @@
 <div class="sticky-top">
   <aside class="blog-sidebar">
-    <nav class="blog-sidebar-toc">
+    <nav class="blog-sidebar__toc">
       {{ if .IsPage }}
         {{ .TableOfContents }}
       {{ end }}
