--- a/themes/blog.yong-ju.me/layouts/partials/blog-footer.html
+++ b/themes/blog.yong-ju.me/layouts/partials/blog-footer.html
@@ -1,14 +1,12 @@
 <footer class="blog-footer">
   <div class="container">
     <p>
-      このブログは <a href="https://gohugo.io">Hugo</a> と
-      <span class="blog-footer-heart"><span class="bi-heart-fill"></span></span>
-      によって作成されました。
+      このブログは <a href="https://gohugo.io">Hugo</a> によって作成されました。
     </p>
     <p>
-      このブログのテーマはよんじゅによってデザインされ、
+      このブログのテーマは、よんじゅによってデザインされ、
       <a href="https://getbootstrap.jp/docs/4.5">Bootstrap 4.5</a>
-      をベースに開発されました。
+      を使用して開発されました。
     </p>
   </div>
 </footer>
