--- a/themes/blog.yong-ju.me/layouts/partials/blog-navbar.html
+++ b/themes/blog.yong-ju.me/layouts/partials/blog-navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="blog-navbar navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
@@ -25,21 +25,6 @@
                 >
               {{ end }}
             </div>
-          </li>
-        {{ end }}
-
-        {{ $currentPage := . }}
-        {{ range site.Menus.main }}
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{{ .URL }}"
-              rel="noopener noreferrer"
-              target="_blank"
-            >
-              <span class="bi-box-arrow-up-right"></span>
-              {{ .Name }}
-            </a>
           </li>
         {{ end }}
       </ul>
