--- a/themes/blog.yong-ju.me/assets/css/index.scss
+++ b/themes/blog.yong-ju.me/assets/css/index.scss
@@ -25,6 +25,7 @@
 @import "blog-main";
 @import "blog-pagination";
 @import "blog-post";
+@import "blog-post-aside";
 @import "blog-post-header";
 @import "blog-post-item";
 @import "blog-post-list";
