theme: Use serif fonts for headings

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,3 +1,6 @@
 /* You can override SASS variables here. */
 
 $font-size-12: $font-size-14;
+
+$font-family-serif: "Times New Roman", "YuMincho", "Hiragino Mincho ProN",
+  "Yu Mincho", "MS PMincho", serif;
