--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -1,3 +1,15 @@
 /* You can add custom styles here. */
 
 @import "syntax";
+
+.markdown {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: $font-family-serif;
+    font-weight: bold;
+  }
+}
