theme: Remove taxonomies on right side

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,6 +17,4 @@
   {{ template "_internal/pagination.html" . }}
 {{ end }}
 
-{{ define "toc" }}
-  {{ partial "docs/taxonomy" . }}
-{{ end }}
+{{ define "toc" }}{{ end }}
