--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -9,7 +9,25 @@
   h4,
   h5,
   h6 {
+    a,
+    a:visited {
+      color: inherit;
+    }
+    a:hover {
+      text-decoration: none;
+    }
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
     font-family: $font-family-serif;
     font-weight: bold;
+  }
+
+  h5,
+  h6 {
+    font-weight: inherit;
   }
 }
